# rigsql

./: Cargo.toml  README.md  action.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  release.yml
crates/rigsql-cli/: Cargo.toml
crates/rigsql-cli/src/: main.rs
crates/rigsql-config/: Cargo.toml
crates/rigsql-config/src/: lib.rs
crates/rigsql-core/: Cargo.toml
crates/rigsql-core/src/: lib.rs  segment.rs  span.rs  token.rs
crates/rigsql-dialects/: Cargo.toml
crates/rigsql-dialects/src/: lib.rs
crates/rigsql-i18n/: Cargo.toml
crates/rigsql-i18n/locales/: en.yaml  ja.yaml
crates/rigsql-i18n/src/: lib.rs
crates/rigsql-lexer/: Cargo.toml
crates/rigsql-lexer/src/: keywords.rs  lexer.rs  lib.rs
crates/rigsql-output/: Cargo.toml
crates/rigsql-output/src/: github.rs  human.rs  json.rs  lib.rs  sarif.rs
crates/rigsql-parser/: Cargo.toml
crates/rigsql-parser/src/: context.rs  grammar.rs  lib.rs  parser.rs
crates/rigsql-parser/src/grammar/: ansi.rs  mod.rs  postgres.rs  tsql.rs
crates/rigsql-rules/: Cargo.toml
crates/rigsql-rules/src/: lib.rs  rule.rs  test_utils.rs  utils.rs  violation.rs
crates/rigsql-rules/src/aliasing/: al01.rs  al02.rs  al03.rs  al04.rs  al05.rs  al06.rs  al07.rs  al08.rs  al09.rs  mod.rs
crates/rigsql-rules/src/ambiguous/: am01.rs  am02.rs  am03.rs  am04.rs  am05.rs  am06.rs  am07.rs  am08.rs  am09.rs  mod.rs
crates/rigsql-rules/src/capitalisation/: cp01.rs  cp02.rs  cp03.rs  cp04.rs  cp05.rs  mod.rs
crates/rigsql-rules/src/convention/: cv01.rs  cv02.rs  cv03.rs  cv04.rs  cv05.rs  cv06.rs  cv07.rs  cv08.rs  cv09.rs  cv10.rs  cv11.rs  cv12.rs  mod.rs
crates/rigsql-rules/src/layout/: lt01.rs  lt02.rs  lt03.rs  lt04.rs  lt05.rs  lt06.rs  lt07.rs  lt08.rs  lt09.rs  lt10.rs  lt11.rs  lt12.rs  lt13.rs  lt14.rs  lt15.rs  mod.rs
crates/rigsql-rules/src/references/: mod.rs  rf01.rs  rf02.rs  rf03.rs  rf04.rs  rf05.rs  rf06.rs
crates/rigsql-rules/src/rigsql/: mod.rs  rg02.rs  rg03.rs  rg04.rs  rg05.rs
crates/rigsql-rules/src/structure/: mod.rs  st01.rs  st02.rs  st03.rs  st04.rs  st05.rs  st06.rs  st07.rs  st08.rs  st09.rs  st10.rs  st11.rs  st12.rs
crates/rigsql-rules/src/tsql/: mod.rs  tq01.rs  tq02.rs  tq03.rs
tests/fixtures/: lint_test.sql  simple_select.sql
