[workspace]
resolver = "2"
members = [
    "crates/rigsql-core",
    "crates/rigsql-lexer",
    "crates/rigsql-parser",
    "crates/rigsql-dialects",
    "crates/rigsql-rules",
    "crates/rigsql-config",
    "crates/rigsql-output",
    "crates/rigsql-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Internal crates
rigsql-core = { path = "crates/rigsql-core" }
rigsql-lexer = { path = "crates/rigsql-lexer" }
rigsql-parser = { path = "crates/rigsql-parser" }
rigsql-dialects = { path = "crates/rigsql-dialects" }
rigsql-rules = { path = "crates/rigsql-rules" }
rigsql-config = { path = "crates/rigsql-config" }
rigsql-output = { path = "crates/rigsql-output" }

# External dependencies
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
rayon = "1.10"
ignore = "0.4"
insta = "1"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
