[workspace]
resolver = "2"
members = [
    "crates/rigsql-core",
    "crates/rigsql-lexer",
    "crates/rigsql-parser",
    "crates/rigsql-dialects",
    "crates/rigsql-rules",
    "crates/rigsql-config",
    "crates/rigsql-output",
    "crates/rigsql-cli",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/yukonsky/rigsql"
description = "A fast SQL linter written in Rust with sqlfluff-compatible rules"
categories = ["command-line-utilities", "development-tools"]
keywords = ["sql", "linter", "sqlfluff", "tsql", "postgres"]

[workspace.dependencies]
# Internal crates
rigsql-core = { path = "crates/rigsql-core", version = "0.4.1" }
rigsql-lexer = { path = "crates/rigsql-lexer", version = "0.4.1" }
rigsql-parser = { path = "crates/rigsql-parser", version = "0.4.1" }
rigsql-dialects = { path = "crates/rigsql-dialects", version = "0.4.1" }
rigsql-rules = { path = "crates/rigsql-rules", version = "0.4.1" }
rigsql-config = { path = "crates/rigsql-config", version = "0.4.1" }
rigsql-output = { path = "crates/rigsql-output", version = "0.4.1" }

# External dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
rayon = "1.10"
ignore = "0.4"
insta = "1"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
