[workspace]
resolver = "2"
members = [
    "crates/rigsql-core",
    "crates/rigsql-lexer",
    "crates/rigsql-parser",
    "crates/rigsql-dialects",
    "crates/rigsql-rules",
    "crates/rigsql-config",
    "crates/rigsql-output",
    "crates/rigsql-i18n",
    "crates/rigsql-cli",
]

[workspace.package]
version = "0.5.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/yukonsky/rigsql"
description = "A fast SQL linter written in Rust with sqlfluff-compatible rules"
categories = ["command-line-utilities", "development-tools"]
keywords = ["sql", "linter", "sqlfluff", "tsql", "postgres"]

[workspace.dependencies]
# Internal crates
rigsql-core = { path = "crates/rigsql-core", version = "0.5.2" }
rigsql-lexer = { path = "crates/rigsql-lexer", version = "0.5.2" }
rigsql-parser = { path = "crates/rigsql-parser", version = "0.5.2" }
rigsql-dialects = { path = "crates/rigsql-dialects", version = "0.5.2" }
rigsql-rules = { path = "crates/rigsql-rules", version = "0.5.2" }
rigsql-config = { path = "crates/rigsql-config", version = "0.5.2" }
rigsql-output = { path = "crates/rigsql-output", version = "0.5.2" }
rigsql-i18n = { path = "crates/rigsql-i18n", version = "0.5.2" }

# External dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.3", features = ["serde"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
rayon = "1.10"
rust-i18n = "3"
sys-locale = "0.3"
ignore = "0.4"
insta = "1"
toml = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
