[package]
name = "rigsql-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast SQL linter CLI with sqlfluff-compatible rules"

[[bin]]
name = "rigsql"
path = "src/main.rs"

[dependencies]
rigsql-core = { workspace = true }
rigsql-lexer = { workspace = true }
rigsql-parser = { workspace = true }
rigsql-dialects = { workspace = true }
rigsql-rules = { workspace = true }
rigsql-config = { workspace = true }
rigsql-output = { workspace = true }
rigsql-i18n = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
sys-locale = { workspace = true }
