[package]
name = "rigsql-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration loader (.sqlfluff and rigsql.toml) for rigsql"

[dependencies]
rigsql-core = { workspace = true }
rigsql-rules = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
