[package]
name = "rigsql-dialects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL dialect definitions (ANSI, TSQL, PostgreSQL) for rigsql"

[dependencies]
rigsql-core = { workspace = true }
rigsql-lexer = { workspace = true }
rigsql-parser = { workspace = true }
strum = { workspace = true }
