[package]
name = "rigsql-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL tokenizer with dialect support for the rigsql linter"

[dependencies]
rigsql-core = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
