[package]
name = "rigsql-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CST parser for the rigsql SQL linter"

[dependencies]
rigsql-core = { workspace = true }
rigsql-lexer = { workspace = true }
thiserror = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
