[package]
name = "rigsql-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lint rules (sqlfluff-compatible) for the rigsql SQL linter"

[dependencies]
rigsql-core = { workspace = true }
rigsql-lexer = { workspace = true }

[dev-dependencies]
rigsql-parser = { workspace = true }
insta = { workspace = true }
